  * sync list of supported filesystems in passdev.c and cryptpassdev-hook
  * fix debian/watch file to work with updated code.google.com download page
  * stop building and shipping static libs (closes: #583387, #583471)
  * add upstream patches:
    - 01_get_key.patch: Try to make get_key() parameter more obvious...
    - 02_stdin_keyfile.patch: Fix luksFormat/luksOpen reading passphrase from
      stdin and "-" keyfile.
    - 03_verbose_level.patch: Add verbose log level, move unlocking messages
  * improve documentation on (pre)checks in manpage. (closes: #583568, #583567)

 -- Jonas Meurer <mejo@debian.org>  Fri, 28 May 2010 13:34:27 +0200

cryptsetup (2:1.1.1-1) unstable; urgency=low

  * new upstream release, changes include:
    - detects and uses device-mapper udev support if available
    - fix luksOpen reading of passphrase on stdin if "-" keyfile specified
    - fix isLuks to initialise crypto backend (closes: #578979)
    - fix luksClose operation for stacked DM devices
  * remove all patches, they have all been merged upstream
  * redirect output of copy_exec in add_device() from initramfs cryptroot
    hook to stderr. fixes verbose run of mkinitramfs. (closes: #574163)
  * acknowledge NMU. thanks to maximilian attems. (closes: #576488)
  * change default for random key from /dev/random to /dev/urandom in
    README.Debian, extend explanation. (closes: #579932)
  * add comment to crypttab manpage about how to disable (pre)checks.
    (closes: #574948)
  * fix cryptdisks.functions to print cryptsource and crypttarget again at
    the passphrase prompt. (closes: #578428)
  * reorder build-depends, add pkg-config, change automake1.9 to automake
  * add new lintian overrides
  * switch to new dpkg source format "3.0 (quilt)", use upstream bzip tarball
  * add ${misc:Depends} to depends for libcryptsetup-dev
  * remove UID checks from initscripts, as these aren't meant to be invoked by