@@ -80,6 +80,7 @@
  <refsect1 id="crypttab.options">
   <title>OPTIONS</title>
   <variablelist>
+
    <varlistentry>
     <term><emphasis>cipher</emphasis>=&lt;cipher&gt;</term>
     <listitem>
@@ -259,6 +260,7 @@
       All fields of the appropriate crypttab entry are available to the keyscript
       as exported environment variables:
       <variablelist>
+
        <varlistentry>
         <term>CRYPTTAB_NAME</term>
         <listitem><para>
@@ -290,16 +292,19 @@
          in case the option is merely a flag.
         </para></listitem>
        </varlistentry>
+
       </variablelist>
      </para>
     </listitem>
    </varlistentry>
+
   </variablelist>
  </refsect1>
 
  <refsect1 id="crypttab.checkscripts">
   <title>CHECKSCRIPTS</title>
   <variablelist>
+
    <varlistentry>
     <term><emphasis>blkid</emphasis></term>
     <listitem>
@@ -339,19 +344,6 @@
     </listitem>
    </varlistentry>
 
-   <varlistentry>
-    <term><emphasis>ext2</emphasis></term>
-    <listitem>
-     <simpara>Checks for a valid ext2/ext3 filesystem.</simpara>
-    </listitem>
-   </varlistentry>
-
-   <varlistentry>
-    <term><emphasis>xfs</emphasis></term>
-    <listitem>
-     <simpara>Checks for a valid xfs filesystem.</simpara>
-    </listitem>
-   </varlistentry>
   </variablelist>
  </refsect1>
 
@@ -384,6 +376,7 @@ cdisk3 /dev/sda3 none cipher=twofish
  <refsect1 id="crypttab.environment">
   <title>ENVIRONMENT</title>
   <variablelist>
+
    <varlistentry>
     <term><emphasis>CRYPTDISKS_ENABLE</emphasis></term>
     <listitem>
@@ -425,6 +418,7 @@ cdisk3 /dev/sda3 none cipher=twofish
      </simpara>
     </listitem>
    </varlistentry>
+
   </variablelist>
  </refsect1>
 
