@@ -16,11 +16,13 @@ cryptsetup (2:1.1.1-2~unreleased) UNRELEASED; urgency=low
   * add upstream patches:
     - 01_get_key.patch: Try to make get_key() parameter more obvious...
     - 02_stdin_keyfile.patch: Fix luksFormat/luksOpen reading passphrase from
-      stdin and "-" keyfile.
+      stdin and "-" keyfile. (closes: #583397)
     - 03_verbose_level.patch: Add verbose log level, move unlocking messages
   * improve documentation on (pre)checks in manpage. (closes: #583568, #583567)
+  * remove xfs and ext2 check scripts documentation from crypttab manpage,
+    blkid script can be used. thanks Christoph Anton Mitterer (closes: #583570)
 
- -- Jonas Meurer <mejo@debian.org>  Fri, 28 May 2010 13:34:27 +0200
+ -- Jonas Meurer <mejo@debian.org>  Fri, 28 May 2010 23:34:03 +0200
 
 cryptsetup (2:1.1.1-1) unstable; urgency=low
 
